esp idf: use miniz in rom

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 
-file(GLOB app_sources "src/*.c")
+# file(GLOB app_sources "src/*.c")
+set(app_sources "src/pngle.c")
 
+idf_component_register(SRCS ${app_sources} INCLUDE_DIRS "src/" REQUIRES esp_rom)
 
-idf_component_register(SRCS ${app_sources} INCLUDE_DIRS "src/")
-
-component_compile_options(-Wno-error=misleading-indentation)
+component_compile_options(-Wno-error=misleading-indentation -DPNGLE_CUSTOM_MINIZ=1)
